--- a/docs/9.ProblemDetails.md
+++ b/docs/9.ProblemDetails.md
@@ -55,16 +55,263 @@ Before going into the options, we need to understand how the relationship betwee
 
 A `ProblemDetails` object requires the following properties: `Type`, `Title`, `Status` and `Detail`. There are other properties, but these are the ones that are required.
 
-The `Status` and `Details` properties are obtained directly from the `ResultMessage`. 
+The `Status` and `Details` properties are obtained directly from the `ResultMessage`.
 
 The `Type` and `Title` properties are taken from a dictionary of problem descriptions, and the library makes a relationship between the `Code` property of the `ResultMessage` and the `Type` property of the `ProblemDetails`.
 
 There are also generic error codes that the library provides. These errors already have a description.
 
-The `ProblemDetailsOptions` class has the dictionary of problem descriptions and other options for generating the `Type` from the `Code` and for generic error descriptions.
+The `ProblemDetailsOptions` class has the property `Descriptor` of type `ProblemDetailsDescriptor` which contains all the information about a problem details. The descriptor has a dictionary of problem descriptions and other options for generating the `Type` from the `Code` and for generic error descriptions.
 
 When you want to use `ProblemDetails`, then you need to configure `ProblemDetailsOptions`, to be able to get the description of the problem from the error code.
 
+To start using `ProblemDetails`, you need to add the problem details description services via the `AddProblemDetailsDescriptions` extension method. See the example below:
 
-//AddProblemDetailsDescriptions
+```csharp
+public void ConfigureServices(IServiceCollection services)
+{
+    services.AddProblemDetailsDescriptions(options =>
+    {
+        // configure the options here...
+    });
+}
+```
 
+### Adding problem descriptions
+
+To add problem descriptions, you can use one of the following methods of the `ProblemDetailsDescriptor` class:
+
+- `Add`: Adds a problem description to the dictionary of problem descriptions.
+- `AddMany`: Adds a list of problem descriptions to the dictionary of problem descriptions.
+- `AddFromJson`: Adds a list of problem descriptions from a JSON string to the dictionary of problem descriptions.
+- `AddFromJsonFile`: Adds a list of problem descriptions from a JSON file to the dictionary of problem descriptions.
+
+The `Add` method receive a `ProblemDetailsDescription` object as a parameter, and `AddMany` a list of `ProblemDetailsDescription`.
+The `AddFromJson` and `AddFromJsonFile` methods receive a string or the path of a JSON file, respectively. The JSON format is a list of `ProblemDetailsDescription` objects.
+
+So, there are two good ways to add problem descriptions, by instantiating `ProblemDetailsDescription` objects using the C# language or by writing a JSON file.
+
+Here's an example of how to add problem descriptions using the C# language:
+
+```csharp
+public void ConfigureServices(IServiceCollection services)
+{
+    services.AddProblemDetailsDescriptions(options =>
+    {
+        // using C# language version 12 for new collection initializer
+        options.Descriptor.AddMany([
+            new ProblemDetailsDescription(
+                code: "insufficient-credits",
+                title: "Insufficient credits",
+                description: "The partner does not have sufficient credits to obtain the required benefit."
+            ),
+            new ProblemDetailsDescription(
+                code: "size-out-of-bounds",
+                type: "https://example.com/probs/size-out-of-bounds",
+                title: "Size out of bounds",
+                description: "The size of all the items is above the capacity of the container."
+            ),
+            new ProblemDetailsDescription(
+                code: "dependencies-not-found",
+                title: "Dependencies not found",
+                description: "One or more dependent records were not found",
+                status: HttpStatusCode.UnprocessableEntity
+            )
+        ]);
+    });
+}
+```
+
+To create a `ProblemDetailsDescription` it is necessary to use one of two constructors, where one is required for the `type` and the other is not.
+When the `type` is not entered, the `type` is automatically generated from the `code` using the `BaseAddress` and `TypeComplement` properties of `ProblemDetailsOptions`. The format looks like this: `$"{BaseAddress}{TypeComplement}{Code}`.
+
+Optionally, you can set the `status` of the `ProblemDetailsDescription`. If not set, the `status` will be taken from the `ResultMessage`.
+
+Here's an example of how to add problem descriptions using a JSON file:
+
+```csharp
+public void ConfigureServices(IServiceCollection services)
+{
+    services.AddProblemDetailsDescriptions(options =>
+    {
+        options.Descriptor.AddFromJsonFile("problem-details.json");
+    });
+}
+```
+
+And the content of the `problem-details.json` file:
+
+```json
+[
+  {
+    "code": "insufficient-credits",
+    "title": "Insufficient credits",
+    "description": "The partner does not have sufficient credits to obtain the required benefit."
+  },
+  {
+    "code": "size-out-of-bounds",
+    "title": "Size out of bounds",
+    "description": "The size of all the items is above the capacity of the container.",
+    "type": "https://example.com/probs/size-out-of-bounds"
+  },
+  {
+    "code": "dependencies-not-found",
+    "title": "Dependencies not found",
+    "description": "One or more dependent records were not found",
+    "status": 422
+  }
+]
+```
+
+Another way to add json files for the descriptions is to use `appsettings.json`. When the `AddProblemDetailsDescriptions` method is called, the `IConfiguration` options are read from the `ProblemDetails` section.
+
+The `DescriptionFiles` property of `ProblemDetailsOptions` is an array of strings that contains the paths of the json files of problem descriptions.
+
+Here's an example of how to add problem descriptions using `appsettings.json`:
+
+```json
+{
+  "ProblemDetails": {
+    "DescriptionFiles": [ "problem-details.json" ]
+  }
+}
+```
+
+### Other options
+
+The `ProblemDetailsOptions` class has other properties that can be configured. See below the properties and their uses:
+
+#### - `BaseAddress`
+
+The base address of the `type` property of the `ProblemDetails`. The default value is `tag:problemdetails/.problems`.
+
+There is an `IPostConfigureOptions` that will update the `BaseAddress` using the host of the request, using the `IHttpContextAccessor` to obtain the host. The base address will be updated to `$"https://{acessor.HttpContext.Request.Host.Value}/.problems";`.
+
+This `IPostConfigureOptions` is added by the `AddProblemDetailsDescriptions` method, and the value will be updated only if the `BaseAddress` is the default value.
+
+#### - `TypeComplement`
+
+The complement of the `type` property of the `ProblemDetails`. The default value is `"#"`.
+
+This value will be used together with the base address and the `code` of the `ResultMessage` to generate the `type` of the `ProblemDetails` when the `type` is not entered in the `ProblemDetailsDescription`.
+
+An example of a generated `type` is: `https://mydomain.com/.problems#insufficient-credits`.
+
+This format for the `type` is useful as a link to a web page documenting problems that can occur in the API.
+
+#### - `Descriptor`
+
+The `ProblemDetailsDescriptor` object that contains the dictionary of problem descriptions and other options for generating the `type` from the `code` and for generic error descriptions.
+
+In another section we'll see more about the `ProblemDetailsDescriptor`.
+
+#### - `DescriptionFiles`
+
+An array of strings that contains the paths of the json files of problem descriptions.
+
+This is useful when you want to add problem descriptions using json files and setting the paths in `appsettings.json`.
+
+#### - `HowToDescribeGenericErrors`
+
+An enum of type `HowToDescribeGenericErrors` that defines how to describe generic errors.
+
+Thera are two options:
+
+- `RfcHttpStatusCode`: Describe the generic erros with the RFC 9457. The problem details types will be links to the RFC 9110 error codes.
+- `AboutBlank`: Describe the generic erros as simple problems, where the http status code is enough to describe the error. The problem details types will be about:blank, as recommended by the RFC 9457. [See more here](https://www.rfc-editor.org/rfc/rfc9457#section-4.2.1).
+
+The default value is `RfcHttpStatusCode`.
+
+This option defines what the `type` of the generic problem details descriptions will be. There are methods that create generic `ResultMessage`, and these `ResultMessage` will be transformed into `ProblemDetails` using the generic descriptions.
+
+When `RfcHttpStatusCode` is used, the `type` will be the link to the status code defined in RFC 9110. For example, for the generic error `NotFound`, the status code will be `404` and the `type` will be `https://www.rfc-editor.org/rfc/rfc9110.html#name-404-not-found`.
+
+When using `AboutBlank` the `type` will be `about:blank` and the `title` will be a fixed value: `"See HTTP Status Code"`.
+
+### `ProblemDetailsDescriptor`
+
+This class contains the problem descriptions. It contains some internal static classes with default values for generic problem descriptions. These values can be changed, but this must be done when the application is initialised, before any requests are made.
+
+## Conversion of `ResultMessage` to `ProblemDetails`
+
+In this section we'll see how the `ResultMessage` is converted to `ProblemDetails`.
+
+The `OperationResult` stores errors in the `ResultErrors` class, which is a list of `ResultMessage`. This means that the `OperationResult` can have more than one error. On the other hand, `ProblemDetails` can only have one error.
+
+When converting a `ResultErrors` to a `ProblemDetails` several checks are made to generate a `ProblemDetails` with as much information as possible.
+
+If `ResultErrors` has only one error, then `ProblemDetails` will be generated from that error (`ResultMessage`).
+
+If there is more than one error, a check will be made to see if they are generic errors, where these errors can be added as additional information to the `ProblemDetails`.
+
+A seguir será apresentado como é feita a conversão de um `ResultMessage` para `ProblemDetails`.
+
+### The error code
+
+One of the most important things is to define the error code. The error code will determine the `type` of the `ProblemDetails`, which is extremely important to the client.
+
+The rule with the highest value is: if there is more than one error, and two of them is not a generic error, then the code will be `aggregate-problems-details`.
+
+When an aggregated error is generated, the extra `inner_details` field will contain the various problem details. Each non-generic error will be converted to `ProblemDetails` and added to the `inner_details` field, which is an array.
+
+Later on, the returns generated by API's will be demonstrated, so it will be clearer what the returned/serialised objects will look like.
+
+When there is only one error that is not generic, the code will be the code of the error.
+
+When there are more than one error and all are generic, the most prioritised error will be used. The error code priority is:
+
+- Application error (500)
+- Validation error (422)
+- Invalid parameter error (400)
+- Not found error (404)
+
+### Extra information
+
+Problema details can have extra information. When the `ResultMessage` has extra information, it will be added to the `ProblemDetails` as `extensions`.
+
+However, when the `ResultErrors` has more than one error message, the generic messages will be added as extra information, in properties defined for each generic type of error.
+
+#### Invalid Parameters and Validation Errors
+
+The invalid parameters or validation erros will be added to the `invalid_params` property. The invalid parameters structure have the following properties:
+
+- `name`: The name of the parameter.
+- `reason`: The reason why the parameter is invalid.
+- `extensions`: Additional information about the problem.
+
+#### Not Found
+
+The not found erros will be added to the `not_found` property. The not found structure have the following properties:
+
+- `message`: A message describing the problem of what is not found.
+- `property`: The property or parameter name related to the problem.
+- `extensions`: Additional information about the problem.
+
+#### Errors
+
+The generic errors, without a specific code, will be added to the `errors` property. The errors structure have the following properties:
+
+- `detail`: Describes the issue in detail.
+- `extensions`: Additional information about the problem.
+
+### Status code
+
+The status code of the `ProblemDetails` will be the status code of the description of the error. If the error is not described, the status code will be the same as the `ResultMessage`.
+
+When there is more than one error, the status code will be the status code of the most prioritised error.
+
+When there is only one non-generic error, the status code will be the status code of the error.
+
+When there is more than one non-generic error, the status code will be the status code of the error with the highest numerical value.
+
+When there are only generic errors, the status code will be the status code of the error with the highest priority. See below for error prioritisation:
+
+- Application error (500)
+- Conflict (409)
+- Validation error (422)
+- Invalid parameter (400)
+- Not found (404)
+
+## Output samples
+
+In this section, we'll see the result of the `ProblemDetails` generated by the library for the web api's.
