--- a/docs/9.ProblemDetails.md
+++ b/docs/9.ProblemDetails.md
@@ -187,7 +187,7 @@ The base address of the `type` property of the `ProblemDetails`. The default val
 
 There is an `IPostConfigureOptions` that will update the `BaseAddress` using the host of the request, using the `IHttpContextAccessor` to obtain the host. The base address will be updated to `$"https://{acessor.HttpContext.Request.Host.Value}/.problems";`.
 
-This `IPostConfigureOptions` is added by the `AddProblemDetailsDescriptions` method, and the value will be updated only if the `BaseAddress` is the default value.
+This `IPostConfigureOptions` is added by the `AddProblemDetailsDescriptions` method, and the value will be updated only if the `BaseAddress` have the default value.
 
 #### - `TypeComplement`
 
@@ -400,8 +400,8 @@ The first example will retorn the type `OperationResult` and the second example 
   "property": "prop"
 }
 ```
-### Multiples Erros
 
+### Multiples Erros
 
 ```json
 [
@@ -415,6 +415,187 @@ The first example will retorn the type `OperationResult` and the second example 
     "text": "invalid input3"
   }
 ]
+```
+
+```json
+{
+  "type": "https://www.rfc-editor.org/rfc/rfc9110.html#name-400-bad-request",
+  "title": "An error has occurred",
+  "status": 400,
+  "detail": "Internal error",
+  "errors": [
+    {
+      "detail": "invalid input1"
+    },
+    {
+      "detail": "invalid input2"
+    },
+    {
+      "detail": "invalid input3"
+    }
+  ]
+}
+```
+
+### Multiples Invalid Parameters
+
+```json
+[
+  {
+    "text": "invalid input1",
+    "property": "prop1",
+    "code": "400"
+  },
+  {
+    "text": "invalid input2",
+    "property": "prop2",
+    "code": "400"
+  },
+  {
+    "text": "invalid input3",
+    "property": "prop3",
+    "code": "400"
+  }
+]
+```
+
+```json
+{
+  "type": "https://www.rfc-editor.org/rfc/rfc9110.html#name-400-bad-request",
+  "title": "The input parameters are invalid",
+  "status": 400,
+  "detail": "Invalid parameters",
+  "invalid_params": [
+    {
+      "name": "prop1",
+      "reason": "invalid input1"
+    },
+    {
+      "name": "prop2",
+      "reason": "invalid input2"
+    },
+    {
+      "name": "prop3",
+      "reason": "invalid input3"
+    }
+  ]
+}
+```
+
+### Multiples Not Found
+
+```json
+[
+  {
+    "text": "not found1",
+    "property": "prop1",
+    "code": "404"
+  },
+  {
+    "text": "not found2",
+    "property": "prop2",
+    "code": "404"
+  },
+  {
+    "text": "not found3",
+    "property": "prop3",
+    "code": "404"
+  }
+]
+```
+
+```json
+{
+  "type": "https://www.rfc-editor.org/rfc/rfc9110.html#name-404-not-found",
+  "title": "Entity not found",
+  "status": 404,
+  "detail": "Entity not found",
+  "not_found": [
+    {
+      "message": "not found1",
+      "property": "prop1"
+    },
+    {
+      "message": "not found2",
+      "property": "prop2"
+    },
+    {
+      "message": "not found3",
+      "property": "prop3"
+    }
+  ]
+}
+```
+
+### Multiples Validations Errors
+
+```json
+[
+  {
+    "text": "invalid input1",
+    "property": "prop1",
+    "code": "422"
+  },
+  {
+    "text": "invalid input2",
+    "property": "prop2",
+    "code": "422"
+  },
+  {
+    "text": "invalid input3",
+    "property": "prop3",
+    "code": "422"
+  }
+]
+```
+
+```json
+{
+  "type": "https://www.rfc-editor.org/rfc/rfc9110.html#name-422-unprocessable-content",
+  "title": "Errors have occurred in the validation of the input parameters.",
+  "status": 422,
+  "detail": "Invalid parameters",
+  "invalid_params": [
+    {
+      "name": "prop1",
+      "reason": "invalid input1"
+    },
+    {
+      "name": "prop2",
+      "reason": "invalid input2"
+    },
+    {
+      "name": "prop3",
+      "reason": "invalid input3"
+    }
+  ]
+}
+```
+
+
+
+```json
+
+```
+
+```json
+
+```
+
+
+
+```json
+
+```
+
+```json
+
+```
+
+
+
+```json
+
 ```
 
 ```json
