Concluído a documentação 9 - ProblemDetails.

--- a/docs/9.ProblemDetails.md
+++ b/docs/9.ProblemDetails.md
@@ -29,6 +29,12 @@ The default values are `false` for both properties. That means the API will alwa
 
 To change the value of these properties there is the `SetResultType` method which receives an enum of type `ErrorResultTypes` to set the properties.
 
+Here is an example of how to set the return type to `ProblemDetails` by default and allow the client to change the return type:
+
+```csharp
+ErrorResultTypeOptions.SetResultType(ErrorResultTypes.ProblemDetailsAsDefault);
+```
+
 The enum `ErrorResultTypes` has the following values:
 
 - `AlwaysOperationResult`: The API will return the `OperationResult` when an error occurs. The header `Error-ResponseType` will be ignored.
@@ -38,12 +44,6 @@ The enum `ErrorResultTypes` has the following values:
 - `OperationResultAsDefault`: The API will return the `OperationResult` when an error occurs, by default. The header `Error-ResponseType` can be used to change the result type.
 
 - `ProblemDetailsAsDefault`: The API will return the `ProblemDetails` when an error occurs, by default. The header `Error-ResponseType` can be used to change the result type.
-
-Here is an example of how to set the return type to `ProblemDetails` by default and allow the client to change the return type:
-
-```csharp
-ErrorResultTypeOptions.SetResultType(ErrorResultTypes.ProblemDetailsAsDefault);
-```
 
 This call can be made in `Program.cs` or `Startup.cs`.
 
@@ -572,52 +572,762 @@ The first example will retorn the type `OperationResult` and the second example 
 }
 ```
 
-
+### Multiples Invalid Parameters
 
 ```json
-
+[
+  {
+    "text": "invalid input1",
+    "property": "prop1",
+    "code": "400"
+  },
+  {
+    "text": "invalid input2",
+    "property": "prop2",
+    "code": "400"
+  },
+  {
+    "text": "invalid input3",
+    "property": "prop3",
+    "code": "400"
+  }
+]
 ```
 
 ```json
-
+{
+  "type": "https://www.rfc-editor.org/rfc/rfc9110.html#name-400-bad-request",
+  "title": "The input parameters are invalid",
+  "status": 400,
+  "detail": "Invalid parameters",
+  "invalid_params": [
+    {
+      "name": "prop1",
+      "reason": "invalid input1"
+    },
+    {
+      "name": "prop2",
+      "reason": "invalid input2"
+    },
+    {
+      "name": "prop3",
+      "reason": "invalid input3"
+    }
+  ]
+}
 ```
 
-
+### Multiples Not Found
 
 ```json
-
+[
+  {
+    "text": "not found1",
+    "property": "prop1",
+    "code": "404"
+  },
+  {
+    "text": "not found2",
+    "property": "prop2",
+    "code": "404"
+  },
+  {
+    "text": "not found3",
+    "property": "prop3",
+    "code": "404"
+  }
+]
 ```
 
 ```json
-
+{
+  "type": "https://www.rfc-editor.org/rfc/rfc9110.html#name-404-not-found",
+  "title": "Entity not found",
+  "status": 404,
+  "detail": "Entity not found",
+  "not_found": [
+    {
+      "message": "not found1",
+      "property": "prop1"
+    },
+    {
+      "message": "not found2",
+      "property": "prop2"
+    },
+    {
+      "message": "not found3",
+      "property": "prop3"
+    }
+  ]
+}
 ```
 
-
+### Multiples Validations Errors
 
 ```json
-
+[
+  {
+    "text": "invalid input1",
+    "property": "prop1",
+    "code": "422"
+  },
+  {
+    "text": "invalid input2",
+    "property": "prop2",
+    "code": "422"
+  },
+  {
+    "text": "invalid input3",
+    "property": "prop3",
+    "code": "422"
+  }
+]
 ```
 
 ```json
-
+{
+  "type": "https://www.rfc-editor.org/rfc/rfc9110.html#name-422-unprocessable-content",
+  "title": "Errors have occurred in the validation of the input parameters.",
+  "status": 422,
+  "detail": "Invalid parameters",
+  "invalid_params": [
+    {
+      "name": "prop1",
+      "reason": "invalid input1"
+    },
+    {
+      "name": "prop2",
+      "reason": "invalid input2"
+    },
+    {
+      "name": "prop3",
+      "reason": "invalid input3"
+    }
+  ]
+}
 ```
 
-
+### Single Custom Error
 
 ```json
-
+[
+  {
+    "text": "The partner does not have enough credits to perform the operation.",
+    "code": "insufficient-credits",
+    "operationId": "123456789",
+    "requiredCredits": "200",
+    "credits": "100",
+    "partnerId": "123456789"
+  }
+]
 ```
 
 ```json
-
+{
+  "type": "tag:problemdetails/.problems#insufficient-credits",
+  "title": "insufficient-credits",
+  "status": 409,
+  "detail": "The partner does not have enough credits to perform the operation.",
+  "operationId": "123456789",
+  "requiredCredits": "200",
+  "credits": "100",
+  "partnerId": "123456789"
+}
 ```
 
-
+### Multiples Custom Errors
 
 ```json
-
+[
+  {
+    "text": "The partner does not have enough credits to perform the operation.",
+    "code": "insufficient-credits",
+    "operationId": "123456789",
+    "requiredCredits": "200",
+    "credits": "100",
+    "partnerId": "123456789"
+  },
+  {
+    "text": "The items of the collection are out of bounds.",
+    "code": "size-out-of-bounds",
+    "parcelId": "123456789",
+    "minSize": "10",
+    "maxSize": "50",
+    "size": "100",
+    "CollectionId": "123456789"
+  },
+  {
+    "text": "The dependencies of the operation were not found.",
+    "code": "dependencies-not-found",
+    "dependencies": "123456789, 123456789, 123456789",
+    "operationId": "123456789"
+  }
+]
 ```
 
 ```json
+{
+  "type": "tag:problemdetails/.problems#aggregate-problems-details",
+  "title": "Multiples problems",
+  "status": 422,
+  "detail": "Multiples problems",
+  "inner_details": [
+    {
+      "type": "tag:problemdetails/.problems#insufficient-credits",
+      "title": "insufficient-credits",
+      "status": 409,
+      "detail": "The partner does not have enough credits to perform the operation.",
+      "operationId": "123456789",
+      "requiredCredits": "200",
+      "credits": "100",
+      "partnerId": "123456789"
+    },
+    {
+      "type": "tag:problemdetails/.problems#size-out-of-bounds",
+      "title": "size-out-of-bounds",
+      "status": 422,
+      "detail": "The items of the collection are out of bounds.",
+      "parcelId": "123456789",
+      "minSize": "10",
+      "maxSize": "50",
+      "size": "100",
+      "CollectionId": "123456789"
+    },
+    {
+      "type": "tag:problemdetails/.problems#dependencies-not-found",
+      "title": "dependencies-not-found",
+      "status": 404,
+      "detail": "The dependencies of the operation were not found.",
+      "dependencies": "123456789, 123456789, 123456789",
+      "operationId": "123456789"
+    }
+  ]
+}
+```
 
+### Custom Error and Multiples Generic Errors
+
+```json
+[
+  {
+    "text": "The partner does not have enough credits to perform the operation.",
+    "code": "insufficient-credits",
+    "operationId": "123456789",
+    "requiredCredits": "200",
+    "credits": "100",
+    "partnerId": "123456789"
+  },
+  {
+    "text": "invalid input1"
+  },
+  {
+    "text": "invalid input2"
+  },
+  {
+    "text": "invalid input3"
+  }
+]
+```
+
+```json
+{
+  "type": "tag:problemdetails/.problems#insufficient-credits",
+  "title": "insufficient-credits",
+  "status": 409,
+  "detail": "The partner does not have enough credits to perform the operation.",
+  "operationId": "123456789",
+  "requiredCredits": "200",
+  "credits": "100",
+  "partnerId": "123456789",
+  "errors": [
+    {
+      "detail": "invalid input1"
+    },
+    {
+      "detail": "invalid input2"
+    },
+    {
+      "detail": "invalid input3"
+    }
+  ]
+}
+```
+
+### Custom Error and Multiples Invalid Parameters
+
+```json
+[
+  {
+    "text": "The partner does not have enough credits to perform the operation.",
+    "code": "insufficient-credits",
+    "operationId": "123456789",
+    "requiredCredits": "200",
+    "credits": "100",
+    "partnerId": "123456789"
+  },
+  {
+    "text": "invalid input1",
+    "property": "prop1",
+    "code": "400"
+  },
+  {
+    "text": "invalid input2",
+    "property": "prop2",
+    "code": "400"
+  },
+  {
+    "text": "invalid input3",
+    "property": "prop3",
+    "code": "400"
+  }
+]
+```
+
+```json
+{
+  "type": "tag:problemdetails/.problems#insufficient-credits",
+  "title": "insufficient-credits",
+  "status": 409,
+  "detail": "The partner does not have enough credits to perform the operation.",
+  "operationId": "123456789",
+  "requiredCredits": "200",
+  "credits": "100",
+  "partnerId": "123456789",
+  "invalid_params": [
+    {
+      "name": "prop1",
+      "reason": "invalid input1"
+    },
+    {
+      "name": "prop2",
+      "reason": "invalid input2"
+    },
+    {
+      "name": "prop3",
+      "reason": "invalid input3"
+    }
+  ]
+}
+```
+
+### Custom Error and Multiples Not Found
+
+```json
+[
+  {
+    "text": "The partner does not have enough credits to perform the operation.",
+    "code": "insufficient-credits",
+    "operationId": "123456789",
+    "requiredCredits": "200",
+    "credits": "100",
+    "partnerId": "123456789"
+  },
+  {
+    "text": "not found1",
+    "property": "prop1",
+    "code": "404"
+  },
+  {
+    "text": "not found2",
+    "property": "prop2",
+    "code": "404"
+  },
+  {
+    "text": "not found3",
+    "property": "prop3",
+    "code": "404"
+  }
+]
+```
+
+```json
+{
+  "type": "tag:problemdetails/.problems#insufficient-credits",
+  "title": "insufficient-credits",
+  "status": 409,
+  "detail": "The partner does not have enough credits to perform the operation.",
+  "operationId": "123456789",
+  "requiredCredits": "200",
+  "credits": "100",
+  "partnerId": "123456789",
+  "not_found": [
+    {
+      "message": "not found1",
+      "property": "prop1"
+    },
+    {
+      "message": "not found2",
+      "property": "prop2"
+    },
+    {
+      "message": "not found3",
+      "property": "prop3"
+    }
+  ]
+}
+```
+
+### Custom Error and Multiples Validations Errors
+
+```json
+[
+  {
+    "text": "The partner does not have enough credits to perform the operation.",
+    "code": "insufficient-credits",
+    "operationId": "123456789",
+    "requiredCredits": "200",
+    "credits": "100",
+    "partnerId": "123456789"
+  },
+  {
+    "text": "invalid input1",
+    "property": "prop1",
+    "code": "422"
+  },
+  {
+    "text": "invalid input2",
+    "property": "prop2",
+    "code": "422"
+  },
+  {
+    "text": "invalid input3",
+    "property": "prop3",
+    "code": "422"
+  }
+]
+```
+
+```json
+{
+  "type": "tag:problemdetails/.problems#insufficient-credits",
+  "title": "insufficient-credits",
+  "status": 409,
+  "detail": "The partner does not have enough credits to perform the operation.",
+  "operationId": "123456789",
+  "requiredCredits": "200",
+  "credits": "100",
+  "partnerId": "123456789",
+  "invalid_params": [
+    {
+      "name": "prop1",
+      "reason": "invalid input1"
+    },
+    {
+      "name": "prop2",
+      "reason": "invalid input2"
+    },
+    {
+      "name": "prop3",
+      "reason": "invalid input3"
+    }
+  ]
+}
+```
+
+### Custom Errors and All Generic Errors
+
+```json
+[
+  {
+    "text": "The partner does not have enough credits to perform the operation.",
+    "code": "insufficient-credits",
+    "operationId": "123456789",
+    "requiredCredits": "200",
+    "credits": "100",
+    "partnerId": "123456789"
+  },
+  {
+    "text": "invalid input1"
+  },
+  {
+    "text": "invalid input2"
+  },
+  {
+    "text": "invalid input3"
+  },
+  {
+    "text": "invalid input1",
+    "property": "prop1",
+    "code": "400"
+  },
+  {
+    "text": "invalid input2",
+    "property": "prop2",
+    "code": "400"
+  },
+  {
+    "text": "invalid input3",
+    "property": "prop3",
+    "code": "400"
+  },
+  {
+    "text": "not found1",
+    "property": "prop1",
+    "code": "404"
+  },
+  {
+    "text": "not found2",
+    "property": "prop2",
+    "code": "404"
+  },
+  {
+    "text": "not found3",
+    "property": "prop3",
+    "code": "404"
+  },
+  {
+    "text": "invalid input1",
+    "property": "prop1",
+    "code": "422"
+  },
+  {
+    "text": "invalid input2",
+    "property": "prop2",
+    "code": "422"
+  },
+  {
+    "text": "invalid input3",
+    "property": "prop3",
+    "code": "422"
+  }
+]
+```
+
+```json
+{
+  "type": "tag:problemdetails/.problems#insufficient-credits",
+  "title": "insufficient-credits",
+  "status": 409,
+  "detail": "The partner does not have enough credits to perform the operation.",
+  "operationId": "123456789",
+  "requiredCredits": "200",
+  "credits": "100",
+  "partnerId": "123456789",
+  "invalid_params": [
+    {
+      "name": "prop1",
+      "reason": "invalid input1"
+    },
+    {
+      "name": "prop2",
+      "reason": "invalid input2"
+    },
+    {
+      "name": "prop3",
+      "reason": "invalid input3"
+    },
+    {
+      "name": "prop1",
+      "reason": "invalid input1"
+    },
+    {
+      "name": "prop2",
+      "reason": "invalid input2"
+    },
+    {
+      "name": "prop3",
+      "reason": "invalid input3"
+    }
+  ],
+  "not_found": [
+    {
+      "message": "not found1",
+      "property": "prop1"
+    },
+    {
+      "message": "not found2",
+      "property": "prop2"
+    },
+    {
+      "message": "not found3",
+      "property": "prop3"
+    }
+  ],
+  "errors": [
+    {
+      "detail": "invalid input1"
+    },
+    {
+      "detail": "invalid input2"
+    },
+    {
+      "detail": "invalid input3"
+    }
+  ]
+}
+```
+
+### Multiples Custom Errors and All Generic Errors
+
+```json
+[
+  {
+    "text": "The partner does not have enough credits to perform the operation.",
+    "code": "insufficient-credits",
+    "operationId": "123456789",
+    "requiredCredits": "200",
+    "credits": "100",
+    "partnerId": "123456789"
+  },
+  {
+    "text": "The items of the collection are out of bounds.",
+    "code": "size-out-of-bounds",
+    "parcelId": "123456789",
+    "minSize": "10",
+    "maxSize": "50",
+    "size": "100",
+    "CollectionId": "123456789"
+  },
+  {
+    "text": "The dependencies of the operation were not found.",
+    "code": "dependencies-not-found",
+    "dependencies": "123456789, 123456789, 123456789",
+    "operationId": "123456789"
+  },
+  {
+    "text": "invalid input1"
+  },
+  {
+    "text": "invalid input2"
+  },
+  {
+    "text": "invalid input3"
+  },
+  {
+    "text": "invalid input1",
+    "property": "prop1",
+    "code": "400"
+  },
+  {
+    "text": "invalid input2",
+    "property": "prop2",
+    "code": "400"
+  },
+  {
+    "text": "invalid input3",
+    "property": "prop3",
+    "code": "400"
+  },
+  {
+    "text": "not found1",
+    "property": "prop1",
+    "code": "404"
+  },
+  {
+    "text": "not found2",
+    "property": "prop2",
+    "code": "404"
+  },
+  {
+    "text": "not found3",
+    "property": "prop3",
+    "code": "404"
+  },
+  {
+    "text": "invalid input1",
+    "property": "prop1",
+    "code": "422"
+  },
+  {
+    "text": "invalid input2",
+    "property": "prop2",
+    "code": "422"
+  },
+  {
+    "text": "invalid input3",
+    "property": "prop3",
+    "code": "422"
+  }
+]
+```
+
+```json
+{
+  "type": "tag:problemdetails/.problems#aggregate-problems-details",
+  "title": "Multiples problems",
+  "status": 422,
+  "detail": "Multiples problems",
+  "inner_details": [
+    {
+      "type": "tag:problemdetails/.problems#insufficient-credits",
+      "title": "insufficient-credits",
+      "status": 409,
+      "detail": "The partner does not have enough credits to perform the operation.",
+      "operationId": "123456789",
+      "requiredCredits": "200",
+      "credits": "100",
+      "partnerId": "123456789"
+    },
+    {
+      "type": "tag:problemdetails/.problems#size-out-of-bounds",
+      "title": "size-out-of-bounds",
+      "status": 422,
+      "detail": "The items of the collection are out of bounds.",
+      "parcelId": "123456789",
+      "minSize": "10",
+      "maxSize": "50",
+      "size": "100",
+      "CollectionId": "123456789"
+    },
+    {
+      "type": "tag:problemdetails/.problems#dependencies-not-found",
+      "title": "dependencies-not-found",
+      "status": 404,
+      "detail": "The dependencies of the operation were not found.",
+      "dependencies": "123456789, 123456789, 123456789",
+      "operationId": "123456789"
+    }
+  ],
+  "invalid_params": [
+    {
+      "name": "prop1",
+      "reason": "invalid input1"
+    },
+    {
+      "name": "prop2",
+      "reason": "invalid input2"
+    },
+    {
+      "name": "prop3",
+      "reason": "invalid input3"
+    },
+    {
+      "name": "prop1",
+      "reason": "invalid input1"
+    },
+    {
+      "name": "prop2",
+      "reason": "invalid input2"
+    },
+    {
+      "name": "prop3",
+      "reason": "invalid input3"
+    }
+  ],
+  "not_found": [
+    {
+      "message": "not found1",
+      "property": "prop1"
+    },
+    {
+      "message": "not found2",
+      "property": "prop2"
+    },
+    {
+      "message": "not found3",
+      "property": "prop3"
+    }
+  ],
+  "errors": [
+    {
+      "detail": "invalid input1"
+    },
+    {
+      "detail": "invalid input2"
+    },
+    {
+      "detail": "invalid input3"
+    }
+  ]
+}
 ```
